Fix copy image path in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <button class="copyBtn" data-copy>
             <span class="copy-tooltip" data-copyMsg></span>
             <!-- copywala img -->
-            <img src="assets/copy.svg" alt="copy" height="23" width="23" />
+            <img src="images/copy.svg" alt="copy" height="23" width="23" />
           </button>
         </div>
 
@@ -97,4 +97,5 @@
 
     <script src="script.js"></script>
   </body>
+
 </html>
